--- a/project-3/package.json
+++ b/project-3/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.10.0",
+    "react-icons": "^4.1.0",
     "react-iframe": "^1.8.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
