--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "cookieparser": "^0.1.0",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
-    "express-session": "^1.17.1",
     "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
     "express-validator": "^6.6.1",
     "hbs": "^4.1.1",
     "http": "0.0.1-security",
@@ -34,6 +34,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "unirest": "^0.6.0"
   },
