--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "styled-components": "^5.2.1",
+    "swr": "^0.4.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
