--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
+    "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
     "cookieparser": "^0.1.0",
     "express": "^4.17.1",
@@ -35,22 +36,21 @@
     "express-validator": "^6.6.1",
     "hbs": "^4.1.1",
     "http": "0.0.1-security",
+    "if-env": "^1.0.4",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "react-bootstrap": "^1.4.3",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "unirest": "^0.6.0"
   },
   "devDependencies": {
-    "concurrently": "^5.3.0",
-    "dotenv": "^8.2.0",
-    "if-env": "^1.0.4",
-    "nodemon": "^2.0.6",
-    "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "dotenv": "^8.2.0"
   }
 }
